{
    "name": "InputMaster",
    "maps": [
        {
            "name": "Player",
            "id": "162a0ceb-3244-4d66-b095-8d2f9ab0f4b9",
            "actions": [
                {
                    "name": "PrimaryShoot",
                    "type": "Button",
                    "id": "24eefad7-281f-4c4a-b71c-a872294edb60",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold(duration=0.01,pressPoint=0.001)"
                },
                {
                    "name": "SecondaryShoot",
                    "type": "Button",
                    "id": "3ebc4e7f-493f-42a0-b8d5-511c3b573fc5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold(duration=0.01,pressPoint=0.001)"
                },
                {
                    "name": "Horizontal",
                    "type": "Button",
                    "id": "c2d0d649-05d1-4f39-827b-6b3265e70846",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "Vertical",
                    "type": "Button",
                    "id": "84ad8ecc-2088-406f-8a12-3dbdeaba32b7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "0759e705-da78-4ba7-afce-4a6728cc4597",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9ff4ee87-7a1a-4e90-a515-89a9729a5b81",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "PrimaryShoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e9f9d3d6-ff9f-4f5f-af0f-f91d1f224c5f",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "PrimaryShoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Keyboard",
                    "id": "25e87b8c-ffea-49ac-9a37-3a42c008378b",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Horizontal",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "32a0206a-575c-4769-a967-36b5e19b42b4",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "Horizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "4ced8b93-0d68-4ba8-bfed-c6766a50d227",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "Horizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Keyboard",
                    "id": "6a02ea77-7ad4-4ff3-b22d-164bd930e352",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Vertical",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "c5aef049-b662-4f57-ae10-56a381f369e2",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "Vertical",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "7acfaade-1db1-41e1-98e1-0c8b297ba4aa",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "Vertical",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "90db1a95-1acd-435d-85b9-23e05d069180",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "29ae2ba9-5b3e-4d47-ae87-5f03f7c0251e",
                    "path": "<Mouse>/rightButton",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "SecondaryShoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1b00e3c1-df8c-4a8e-9b53-58b9c4a9e765",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "SecondaryShoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard and Mouse",
            "bindingGroup": "Keyboard and Mouse",
            "devices": [
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Gamepad",
            "bindingGroup": "Gamepad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}